--- a/styles.css
+++ b/styles.css
@@ -1,71 +1,60 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    background-color: #121212;
-    color: #fff;
-}
-
-.app-container {
-    width: 100%;
-    max-width: 480px;
-    margin: auto;
-    background-color: #1c1c1c;
-}
-
-.header {
-    padding: 20px;
-    text-align: center;
-    background-color: #333;
-    border-bottom: 1px solid #444;
-}
-
-.header h1 {
-    margin: 0;
-    font-size: 24px;
-}
-
+/* Estilo para las cuadrículas de películas y series en tres columnas */
 .movies-grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
     padding: 20px;
 }
 
 .movie-item {
     text-align: center;
+    cursor: pointer;
 }
 
 .movie-item img {
-    width: 100%;
+    max-width: 100%;
     border-radius: 10px;
-    margin-bottom: 5px;
-}
-
-.movie-item p {
-    font-size: 14px;
-}
-
-.footer {
-    background-color: #333;
-    padding: 10px 0;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    max-width: 480px;
 }
 
 .footer-nav {
     display: flex;
     justify-content: space-around;
+    padding: 10px;
+    background-color: #333;
+    color: white;
 }
 
 .footer-nav a {
     color: white;
     text-decoration: none;
-    font-size: 14px;
 }
 
 .footer-nav a.active {
-    color: #007BFF;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.details-content {
+    text-align: center;
+    padding: 20px;
+}
+
+.background-image {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.details-logo {
+    max-width: 150px;
+    margin-top: 20px;
+}
+
+button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    border: none;
+    background-color: #333;
+    color: white;
+    cursor: pointer;
 }
